@@ -905,6 +905,36 @@ CONTRACT_TYPE
 CONTRACT_TYPE
 {
     // Unique name of the contract (required)
+    name = RequirementTestContractPartModuleUnlocked
+
+    // Contract text
+    title = RTC - PartModuleUnlocked
+    description = A more detailed description of the contract.  This is where you come in.
+    synopsis = We want you to do a thing.
+    completedMessage = You have done the thing.
+
+    // Need at least one parameter.
+    PARAMETER
+    {
+        name = ReachSpace1
+        type = ReachSpace
+    }
+
+    // Requirement for having a certain part unlocked from the tech tree
+    REQUIREMENT
+    {
+        name = PartModuleUnlocked1
+        type = PartModuleUnlocked
+
+        // PartModule that needs to be unlocked
+        partModule = ModuleReactionWheel
+    }
+}
+
+// Contract for requirement test
+CONTRACT_TYPE
+{
+    // Unique name of the contract (required)
     name = RequirementTestContractAltitudeRecord
 
     // Contract text
